--- a/scg-webflux-test/src/test/resources/application.yml
+++ b/scg-webflux-test/src/test/resources/application.yml
@@ -1,19 +1,18 @@
-geoip2:
+geolite:
   db:
-    asn: geoip2/GeoLite2-ASN.mmdb
-    city: geoip2/GeoLite2-City.mmdb
-    country: geoip2/GeoLite2-Country.mmdb
-  loadOnStartUp: true
-  mdcKey: visitor_info
+    asn: geolite/GeoLite2-ASN.mmdb
+    city: geolite/GeoLite2-City.mmdb
+    country: geolite/GeoLite2-Country.mmdb
+  baggage: visitor_info
   maxTrustedIndex: 1
 management:
   tracing:
-    baggage: # https://docs.spring.io/spring-boot/reference/actuator/tracing.html
+    baggage:
       correlation:
         fields:
-          - ${geoip2.mdcKey}
+          - ${geolite.baggage}
       remote-fields:
-        - ${geoip2.mdcKey}
+        - ${geolite.baggage}
 logging:
   level:
     com.hamza: DEBUG
@@ -31,7 +30,7 @@ spring:
               predicates:
                 - Path=/stub/**
               filters:
-                - GeoIP2
+                - GeoLite
   config:
     activate:
       on-profile: default
