--- a/scg-webflux-test/src/test/resources/application.yml
+++ b/scg-webflux-test/src/test/resources/application.yml
@@ -30,7 +30,7 @@ spring:
               predicates:
                 - Path=/stub/**
               filters:
-                - GeoLite
+                - ReactiveGeoLite
   config:
     activate:
       on-profile: default
