configurable fields exclusion & log level

--- a/core/src/main/resources/application.yml
+++ b/core/src/main/resources/application.yml
@@ -1,10 +1,17 @@
 geolite:
+  baggage: visitor_info
   db:
     asn: geolite/GeoLite2-ASN.mmdb
     city: geolite/GeoLite2-City.mmdb
     country: geolite/GeoLite2-Country.mmdb
-  baggage: visitor_info
+  exclude:
+    - asn.ipAddress
+    - asn.hostAddress
+    - asn.prefixLength
   maxTrustedIndex: 1
+logging:
+  level:
+    io.github.hamza.geolite: DEBUG
 management:
   tracing:
     baggage:
