--- a/core/src/main/resources/application.yml
+++ b/core/src/main/resources/application.yml
@@ -18,5 +18,5 @@ management:
       correlation:
         fields:
           - ${geolite.baggage}
-      remote-fields:
-        - ${geolite.baggage}
+#      remote-fields:
+#        - ${geolite.baggage}
