--- a/.sdkmanrc
+++ b/.sdkmanrc
@@ -1,4 +1,4 @@
 # Enable auto-env through the sdkman_auto_env config
 # Add key=value pairs of SDKs to use below
-java=21.0.9.crac-zulu
-gradle=9.3.0
+java=21.0.10-zulu
+gradle=9.3.1
